tests/xml/validxml/ades/goodades1.xml.README
goodades1.xml: OK tests optical and offset lists outside obsBlock
