tests/xml/invalidxml/obsBlock/badmixedtype.xml.README
badmixedtype.xml: BAD because obsData has optical and offset entries
